--- a/Assignments/HTML & CSS/Project 08/style.css
+++ b/Assignments/HTML & CSS/Project 08/style.css
@@ -605,3 +605,16 @@ body{
     margin: 30px 0;
     margin-right: 900px;
 }
+
+
+
+/* Mobile device */
+@media screen and (max-width: 375px) {
+    .navbar > ul{
+        font-size: 16px;
+    }
+    
+.navbar > ul > li{
+    margin-left: 30px;
+}
+}
