--- a/Assignments/Javascript/weather website/style.css
+++ b/Assignments/Javascript/weather website/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 /* designing the weather app container */
@@ -61,4 +62,29 @@ body {
   flex-direction: column;
   align-items: center;
   gap: 5px;
+}
+
+/* Forecast */
+
+.forecast{
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  margin-top: 50px;
+  column-gap: 15px;
+}
+
+.fore_card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px 0px;
+  border: 2px solid #757575f5;
+  border-radius: 10px;
+  padding:  35px;
+}
+
+
+footer{
+  display: flex;
+  
 }
