--- a/Projects/Javascript/Currency Converter/style.css
+++ b/Projects/Javascript/Currency Converter/style.css
@@ -80,6 +80,20 @@ form .drop-list{
     margin: 0 -5px 0 5px;
 }
 
+.select-box select::-webkit-scrollbar{
+    width: 8px;
+}
+
+.select-box select::-webkit-scrollbar-track{
+    background: #DAD7CD;
+}
+
+.select-box select::-webkit-scrollbar-thumb{
+    background: #588157;
+    border-radius: 8px;
+    border-right: 2px solid #588157;
+}
+
 .select-box img{
     max-width: 25px;
 }
