--- a/Projects/Javascript/Currency Converter/style.css
+++ b/Projects/Javascript/Currency Converter/style.css
@@ -14,6 +14,7 @@ body{
     justify-content: center;
     min-height: 100vh;
     background: #588157;
+    flex-direction: column;
 }
 .box{
     width: 370px;
@@ -115,4 +116,32 @@ form button{
     font-size: 17px;
     cursor: pointer;
     background: #588157;
+}
+
+/* Made with love */
+.footer{
+    position: absolute;
+    bottom: 0px;
+    left: 42%;
+}
+
+.name{
+    color: #000;
+    text-align: center;
+    font-size: 14px;
+    padding-bottom: 10px;
+    font-weight: 500;
+}
+
+.name  span{
+    color: #9d0208;
+}
+
+.name a{
+    text-decoration: none;
+}
+
+.name a:visited{
+    color: #0000;
+    text-decoration: none;
 }
