--- a/Projects/Javascript/Currency Converter/style.css
+++ b/Projects/Javascript/Currency Converter/style.css
@@ -121,7 +121,7 @@ form button{
 /* Made with love */
 .footer{
     position: absolute;
-    bottom: 0px;
+    bottom: 1px;
     left: 42%;
 }
 
@@ -139,6 +139,7 @@ form button{
 
 .name a{
     text-decoration: none;
+    color: #0000;
 }
 
 .name a:visited{
